--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tonic = "0.14.2"
+prost = "0.14.1"
+tokio = { version = "1.48.0", features = ["full"] }
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
