--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 tonic = "0.14.2"
 prost = "0.14.1"
+tonic-prost = "0.14.2"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [build-dependencies]
