--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tonic = "0.14.2"
 prost = "0.14.1"
 tonic-prost = "0.14.2"
 tokio = { version = "1.48.0", features = ["full"] }
+anyhow = "1.0.100"
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
