--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ prost = "0.14.1"
 tonic-prost = "0.14.2"
 tokio = { version = "1.48.0", features = ["full"] }
 anyhow = "1.0.100"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+ron = "0.12"
 
 [build-dependencies]
 tonic-prost-build = "0.14.2"
