--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1.48.0", features = ["full"] }
 anyhow = "1.0.100"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+http = "1.4.0"
 # ron = "0.12"
 
 [build-dependencies]
