--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0.100"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 http = "1.4.0"
+rand = "0.9.2"
 # ron = "0.12"
 
 [build-dependencies]
