--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2024"
 tonic = "0.14.2"
 prost = "0.14.1"
 tonic-prost = "0.14.2"
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.100"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 http = "1.4.0"
 rand = "0.9.2"
+futures = "0.3.31"
 # ron = "0.12"
 
 [build-dependencies]
