--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde_json = "1.0"
 http = "1.4.0"
 rand = "0.9.2"
 futures = "0.3.31"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+tracing-appender = "0.2"
 # ron = "0.12"
 
 [build-dependencies]
